--- a/Flashcards/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards/Flashcards.csproj
@@ -50,9 +50,14 @@
     <Compile Include="FileMaster.cs" />
     <Compile Include="Flashcard.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="IUserInteractor.cs" />
     <Compile Include="ModeSelector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConsoleUserInteractor.cs" />
+    <Compile Include="Study.cs" />
+    <Compile Include="TopicMet.cs" />
+    <Compile Include="UserAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
