--- a/Flashcards/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards/Flashcards.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,6 +40,7 @@
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -58,6 +61,7 @@
     <Compile Include="Study.cs" />
     <Compile Include="TopicMet.cs" />
     <Compile Include="TypesOfStudy.cs" />
+    <Compile Include="UserContext.cs" />
     <Compile Include="UserTypesOfStudy.cs" />
     <Compile Include="UserAction.cs" />
   </ItemGroup>
